Fixed #43 rename mt-15 mt-30 to top-gap top-gap-big

--- a/site/themes/mobi/source/css/mobi.css/mobi.css
+++ b/site/themes/mobi/source/css/mobi.css/mobi.css
@@ -469,14 +469,11 @@ html [type=button],
   .show-on-mobile {
     display: none; } }
 
-.mt-30 {
+.top-gap-big {
   margin-top: 30px; }
 
-.mt-15 {
+.top-gap {
   margin-top: 15px; }
-
-.mt-0 {
-  margin-top: 0; }
 
 .scroll-view {
   max-height: 300px;
