--- a/src/_utilities.scss
+++ b/src/_utilities.scss
@@ -10,16 +10,12 @@
   }
 }
 
-.mt-30 {
+.top-gap-big {
   margin-top: $width-gap-double;
 }
 
-.mt-15 {
+.top-gap {
   margin-top: $width-gap;
-}
-
-.mt-0 {
-  margin-top: 0;
 }
 
 .scroll-view {
